# mjol

./: .gitignore  README.md  pyproject.toml  test_output.gff3
dev/: dev.ipynb  dev2.ipynb
src/mjol/: base.py  gan.py  tools.py  utils.py
src/mjol/STALE/: base.py  gan.py  stash.py
stuff/: gan.py
